# canonical_json

./: Cargo.toml  README.md  spec.txt
benches/: benchmarks.rs
json/: Cargo.toml
json/src/: builder.rs  de.rs  error.rs  lib.rs  read.rs  ser.rs  value.rs
json_tests/: Cargo.toml
json_tests/benches/: bench.rs  bench_json.rs  bench_log.rs
json_tests/tests/: test.rs  test.rs.in  test_json.rs  test_json_builder.rs
src/: benches.rs  de.rs  error.rs  lib.rs  ser.rs  tests.rs  value.rs
