[package]
name = "canonical_json"
version = "0.8.3"
authors = ["Erick Tryzelaar <erick.tryzelaar@gmail.com>"]
license = "MIT/Apache-2.0"
description = "A JSON serialization file format"
readme = "../README.md"
keywords = ["json", "serde", "serialization"]

[features]
unstable-testing = ["clippy"]

[dependencies]
serde = "0.8.13"
num-traits = "~0.1.32"
clippy = { version = "^0.*", optional = true }
itoa = "0.1"
dtoa = "0.2"
